# gram

./: .gitignore  .mypy.ini  LICENSE  README.md  installation.md  pyproject.toml  setup.py
doc/: Makefile  gram.html  index.html  search.js
doc/gram/: Classes.html  Constructors.html  Loading.html  Writing.html  chemoinformatics.html  network_generation.html
doc/gram/Classes/: _compound.html  _input.html  _inputProcess.html  _network.html  _output.html  _outputProcess.html  _reaction.html  _reactionRule.html  _reactionTemplate.html  _substructure.html  compound.html  input.html  input_process.html  network.html  output.html  output_process.html  reaction.html  reaction_rule.html  substructure.html
doc/gram/Constructors/: compound.html  input.html  input_process.html  (+7 more)
examples/: generate_network.py  loading.py  reaction_SMARTS_templates.tsv  reactions_and_rules.tsv
gram/Classes/: __init__.py  _compound.py  _network.py  _outputProcess.py  _reaction.py  _reactionRule.py  _reactionTemplate.py  _substructure.py  input.py  input_process.py  output.py  output_process.py
gram/Constructors/: compound.py  input.py  input_process.py  network.py  output.py  output_process.py  reaction.py  reaction_rule.py  reaction_template.py  substructure.py
gram/Loading/: __init__.py
gram/Writing/: __init__.py
gram/chemoinformatics/: __init__.py  cleaning.py  reaction_smarts.py  reaction_smiles.py  run_reaction.py  smarts.py  smiles.py  substructure_match.py
gram/network_generation/: __init__.py  algorithm_level.py  filters.py  inspect.py  modify_network.py  utilities.py
(+75 files in other folders)
