[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gram"
version = "0.0.0"
description = "A library for reaction network generation."
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [{ name = "William E. Robinson", email = "william.robinson@ru.nl" }]
maintainers = [
  { name = "William E. Robinson", email = "william.robinson@ru.nl" },
]
dependencies = ["rdkit"]

[project.optional-dependencies]
dev = ["pdoc", "ruff", "mypy", "pylint"]
vis = ["graphviz"]

[project.urls]
"Source" = "https://github.com/Will-Robin/gram"
"Homepage" = "https://github.com/Will-Robin/gram"
